--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -2,21 +2,9 @@ name: create_release
 
 on:
   workflow_dispatch:
-    inputs:
-      skipTests:
-        type: choice
-        description: 'Skip Tests'
-        options: ['true', 'false']
-        default: 'false'
   push:
-    branches: [ main ]
-    paths-ignore:
-      - 'docs/**'
-      - 'deploy/**'
-      - '.github/**'
-      - 'README.*'
-      - '.devcontainer/**'
-      - '.vscode/**'
+    branches:
+      - main
 
 jobs:
   create_release:
@@ -38,7 +26,6 @@ jobs:
 
       - name: Run Unit Tests
         run: ./run-unit-tests.sh
-        if: github.event.inputs.skipTests != 'true'
 
       - name: Generate version number
         id: tag_version
@@ -46,22 +33,32 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
-          
-      - name: Build Docker Image
-        env:
-          VERSION: ${{ steps.tag_version.outputs.tag }}
-        run: |
-          echo "Building version: $VERSION"
-          docker build --build-arg VERSION=$VERSION -t $IMAGE_NAME .
 
-      - name: Log in to DockerHub
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Push Docker Image
-        run: docker push your-dockerhub-username/your-image-name:${{ env.new_version }}
+      - name: Build and Push Docker Image
+        env:
+          USERNAME: ${{ vars.DOCKERHUB_USERNAME }}
+          REPOSITORY: geneie_nif_calculator
+          IMAGE_NAME: geneie_nif_calculator
+          TAG_LATEST: latest
+          TAG_SEMVER: ${{ steps.tag_version.outputs.tag }}
+          TAG_SHA: ${{ github.sha }}
+        run: |
+          set -e
+          set -x
+          docker build -t $IMAGE_NAME .
+          docker tag $IMAGE_NAME $USERNAME/$REPOSITORY:$TAG_LATEST
+          docker tag $IMAGE_NAME $USERNAME/$REPOSITORY:$TAG_SEMVER
+          docker tag $IMAGE_NAME $USERNAME/$REPOSITORY:$TAG_SHA
+          docker push $USERNAME/$REPOSITORY:$TAG_LATEST
+          docker push $USERNAME/$REPOSITORY:$TAG_SEMVER
+          docker push $USERNAME/$REPOSITORY:$TAG_SHA
+          echo "::notice ::$USERNAME/$REPOSITORY:$TAG_SEMVER"
           
       - name: Create github release
         uses: ncipollo/release-action@v1
