--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "Python: Flask",
             "type": "debugpy",
             "request": "launch",
-            "program": "${workspaceFolder}/nif_calculator/app.py",
+            "module": "nif_calculator.app",
             "args": [
                 "run"
             ],
