--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,4 +6,10 @@ parse_type==0.6.3
 pluggy==1.5.0
 pytest==8.3.2
 pytest-bdd==7.2.0
-six==1.16.0
+six==1.16.0greenlet==3.0.3
+playwright==1.46.0
+pyee==11.1.0
+pytest-base-url==2.1.0
+pytest-playwright==0.5.2
+python-slugify==8.0.4
+text-unidecode==1.3
